2007-01-17  Alice Liu  <alice.liu@apple.com>

        Reviewed by Harrison.

        Fix for <rdar://problem/4894155> REGRESSION: Extra line break is pasted with content into message body after choosing File - Paste

        Migration of some editing code from WebHTMView to WebCore::Editor
        resulted in not calling pasteboardTypesForSelection, which Mail was
        overriding for the special purpose of adding a type to the
        pasteboard after WebKit did.  This patch adds 2 separate code paths
        for Tiger and Leopard.  On Tiger we give in and call the WebView's
        pasteboardTypesForSelection.  On Leopard we call a delegate after
        the pasteboard types are set. 

        * DefaultDelegates/WebDefaultEditingDelegate.m:
        (-[WebDefaultEditingDelegate webView:didSetSelectionTypesForPasteboard:]):
        * WebCoreSupport/WebEditorClient.h:
        * WebCoreSupport/WebEditorClient.mm:
        (WebEditorClient::didSetSelectionTypesForPasteboard):
        (WebEditorClient::pasteboardTypesForSelection):
        * WebView/WebEditingDelegate.h:

2007-01-17  John Sullivan  <sullivan@apple.com>

        Reviewed by Darin

        - WebKit part of fix for <rdar://problem/4462420> REGRESSION: Mail hangs during 
          Replace All if the replacement string contains the search string

        * Misc/WebKitVersionChecks.h:
        Added extern "C" so this can be used from .mm files. I don't need this change anymore for
        this fix, but it's still worth fixing now so it doesn't bite anyone later.

        * WebView/WebDocumentPrivate.h:
        Invented new private protocol WebDocumentIncrementalSearching, that has one method. The one
        method is just like the one WebDocumentSearching method, but with an additional parameter.
        We hope to eliminate this dependence on protocols someday, but adding another one as SPI
        seems like it won't make anything worse.
        
        * WebView/WebHTMLView.mm: